k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moviesapp
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
        app: moviesapp
    spec:
      containers:
        - name: backend
          image: konstantinosal/kubernetes-movies-backend-service:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8000
