k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    tier: backend
    app: moviesapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
