k8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: moviesapp
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: moviesapp
    tier: database
